k8s/overlays/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stephaniegiorgis
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - staging.stephaniegiorgis.ch
      secretName: stephaniegiorgis-staging-tls
  rules:
    - host: staging.stephaniegiorgis.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stephaniegiorgis
                port:
                  number: 3000
